--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "8.1.0",
+    "@angular/animations": "6.0.9",
+    "@angular/core": "6.0.9",
+    "@angular/compiler": "6.0.9",
+    "@angular/common": "6.0.9",
     "@angular/compiler-cli": "6.0.9",
+    "@angular/forms": "6.0.9",
     "@angular/language-service": "6.0.9",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
